# AIE8

01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  alternative_rag_example.py  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: alternative_vectordatabase.py  enhanced_rag_pipeline.py  vectordatabase.py
02_Embeddings_and_RAG/aimakerspace/openai_utils/: base_embedding.py  embedding.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
